<resources>
    <string name="app_name">DiabetesHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>

    <string name="export_amount_of_extensions">Выбрано расширений: %1$d</string>

    <string name="pattern_csv">/%1$s.csv</string>
    <string name="pattern_xml">/%1$s.xml</string>
    <string name="pattern_json">/%1$s.json</string>

    <string name="filename_hint">Укажите название файла для сохранения:</string>

    <string name="pattern_filename">/%1$s%2$s</string>

    <string name="home_save_data">Сохранить данные</string>

    <string name="export_title">Экспорт данных</string>

    <string name="import_title">Импорт данных</string>

    <string name="move_to_export_data">Перейти к экспорту данных</string>

    <string name="topic_hint">Укажите тему сообщения</string>

    <string name="receiver_hint">Укажите получателя сообщения</string>

    <string name="message_hint">Укажите сообщение</string>

    <!--Дневник диабетика-->
    <string name="title_diabetes_diary">Дневник диабетика</string>
    <string name="diabetes_hint_add_note">Добавьте новую запись дневника диабетика:</string>
    <!--Дневник питания-->
    <string name="title_food_diary">Дневник питания</string>
    <string name="food_hint_add_note">Добавьте новую запись дневника питания:</string>
    <!--Общее-->
    <string name="key_user_is_registered">Is user registered</string>
    <string name="key_user_hashcode">User\'s hashcode</string>
    <string name="button_add_note">Добавить запись</string>
    <string name="button_add">Добавить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_save">Сохранить</string>
    <string name="button_remove">Удалить</string>
    <string name="button_continue">Продолжить</string>
    <string name="button_import">Импортировать данные</string>
    <string name="button_import_file">Импортировать файл</string>
    <string name="button_export">Экспортировать данные</string>
    <string name="button_send_email">Отправить письмо</string>
    <string name="hint_edit_note">Изменение записи</string>
    <string name="hint_remove_note">Хотите удалить данную запись?</string>
    <!--Импорт и экспорт-->
    <string name="dropbox_access_token">71F23r4NwJwAAAAAAAAAAZRhNfXxRqKUx4qifUV_3Y1ZGtmvxPT-tefbjKBm5FOR</string>
    <string name="hint_import_and_export">Выберите метод работы с данными:</string>
    <string name="hint_import_type_in_filename">Введите название импортируемого с Dropbox файла:</string>
    <string name="hint_import_select_file_extension">Выберите расширение импортируемого файла:</string>
    <string name="extension_csv">.csv</string>
    <string name="extension_xml">.xml</string>
    <string name="extension_json">.json</string>
    <string name="hint_select_import_type">Выберите метод импорта:</string>
    <string name="hint_select_export_type">Выберите метод экспорта:</string>
    <string name="hint_import_from_app_directory">Из директории приложения</string>
    <string name="hint_import_from_dropbox">Из Dropbox</string>
    <string name="hint_export_to_app_directory">Сохранить в директории приложения</string>
    <string name="hint_export_to_dropbox">Сохранить в Dropbox</string>
    <string name="hint_export_to_email">Отправить по почте</string>
    <string name="hint_export_to_email_type_in_filename">Введите название экспортируемого по почте файла:</string>
    <string name="hint_export_to_email_file_extension">Выберите расширение экспортируемого по почте файла:</string>
    <string name="hint_export_to_dropbox_type_in_filename">Введите название экспортируемого на Dropbox файла:</string>
    <string name="hint_export_to_app_directory_type_in_filename">Введите название экспортируемого в директорию приложения файла:</string>
    <string name="hint_export_select_file_extension">Выберите расширение экспортируемого файла:</string>
    <string name="message_successful_file_loaded_from_directory">Файл был успешно загружен из директории приложения</string>
    <string name="message_error_file_loaded_from_directory">Произошла ошибка при загрузке файла из директории приложения</string>
    <string name="message_successful_file_saved_into_directory">Файл был успешно сохранён в директорию приложения</string>
    <string name="message_error_file_saved_into_directory">Произошла ошибка при сохранении файла в директорию приложения</string>
    <!--Экран пользователя-->
    <string name="user_title">Пользователь</string>
    <string name="title_registration">Регистрация</string>
    <string name="hint_phone_number_or_email">Номер или логин:</string>
    <string name="hint_password">Пароль:</string>
    <string name="button_register_user">Зарегистрироваться</string>
    <string name="message_successful_user_registered">Вы были успешно зарегистрированы!</string>
    <string name="message_error_user_registered">Произошла ошибка при регистрации пользователя</string>
    <string name="title_authorization">Авторизация</string>
    <string name="button_authorize_user">Авторизоваться</string>
    <string name="title_greeting">Здравствуйте, Михаил</string>
    <string name="button_exit_account">Выйти из аккаунта</string>
    <string name="message_successful_user_authorized">Вы были успешно авторизованы!</string>
    <string name="message_error_user_authorized">Произошла ошибка при авторизации пользователя</string>
    <!--Экран продуктов-->
    <string name="product_title">Продукты</string>

    <string name="title_unathorized">Вы не авторизованы</string>
    <string name="message_unathorized">Нажмите "ОК" для перехода на главный экран для авторизации</string>

    <string name="title_statistics">Статистика Диабет</string>

    <string-array name="diabetes_sort_array">
        <item>Сортировать по:</item>
        <item>Уровню глюкозы в крови</item>
        <item>Дате добавления записи</item>
        <item>Времени добавления записи</item>
    </string-array>
</resources>