<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/DialogTitle"
        android:text="@string/hint_select_import_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_import_from_app_directory"
        android:text="@string/hint_import_from_app_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_import_from_dropbox"
        android:text="@string/hint_import_from_dropbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_cancel"
        android:text="@string/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>