<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/registration_layout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">
        <TextView
            style="@style/CustomDialogTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_registration" />
        <EditText
            android:id="@+id/setup_registration_login"
            android:hint="@string/hint_phone_number_or_email"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setup_registration_password"
            android:hint="@string/hint_password"
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_register_user"
            android:text="@string/button_register_user"
            android:background="@color/white"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_change_to_authorization"
            android:text="Перейти к авторизации"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/authorization_layout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">
        <TextView
            style="@style/CustomDialogTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_authorization" />
        <EditText
            android:id="@+id/setup_authorization_login"
            android:hint="@string/hint_phone_number_or_email"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setup_authorization_password"
            android:hint="@string/hint_password"
            android:layout_marginTop="45dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_authorize_user"
            android:text="@string/button_authorize_user"
            android:background="@color/white"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_change_to_registration"
            android:text="Перейти к регистрации"
            android:background="@color/white"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/user_authorized_layout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/top_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">
        <TextView
            style="@style/CustomDialogTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_greeting" />
        <Button
            android:id="@+id/button_exit_account"
            android:text="@string/button_exit_account"
            android:background="@color/white"
            android:layout_marginTop="55dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>